--- a/chatservercode/chatserver/.env
+++ b/chatservercode/chatserver/.env
@@ -23,4 +23,7 @@ API_AGENT_SKILLS="http://localhost:8000/agent_skills"#db
 API_chatqueue="http://10.16.7.113:8080/api/chat_queue_waiting_messages/"#db
 API_FETCH_REDIS_AGENTS="http://127.0.0.1:8005/fetch_redis_agents"#chatserver calling chatserverapi
 
+#queues ans skills
+QUEUE="technicalsupportqueue@1"
+
 
