--- a/chatservercode/chatserver/Dockerfile
+++ b/chatservercode/chatserver/Dockerfile
@@ -5,4 +5,5 @@ WORKDIR /opt/zconnect
 COPY emailpolling.py /opt/zconnect/
 RUN python3 get-pip.py --force-reinstall
 RUN pip3 install redis
+EXPOSE 8000
 CMD [ "python3","emailpolling.py" ]
