--- a/chatservercode/chatserver/Dockerfile
+++ b/chatservercode/chatserver/Dockerfile
@@ -3,7 +3,22 @@ FROM python:3.10-slim
 WORKDIR /opt/zconnect
 
 COPY emailpolling.py /opt/zconnect/
-RUN python3 get-pip.py --force-reinstall
+COPY serverconnection.py /opt/zconnect/
+COPY .env /opt/zconnect/
+RUN apt-get update && apt-get install -y curl
+
+# Download get-pip.py if not present
+RUN curl -O https://bootstrap.pypa.io/get-pip.py && \
+    chmod +x get-pip.py && \
+    python3 get-pip.py --force-reinstall
+RUN pip install asyncpg
+RUN pip install aiohttp
+RUN pip install python-dotenv
+RUN pip install fastapi
+RUN pip install flask
+RUN pip install psycopg2-binary
+RUN pip install requests
+RUN pip install fastapi_socketio
 RUN pip3 install redis
 EXPOSE 8000
-CMD [ "python3","emailpolling.py" ]
+CMD ["python3","emailpolling.py"]
