--- a/chatservercode/chatserver/Dockerfile
+++ b/chatservercode/chatserver/Dockerfile
@@ -21,5 +21,4 @@ RUN pip install psycopg2-binary
 RUN pip install requests
 RUN pip install fastapi_socketio
 RUN pip3 install redis
-EXPOSE 8000
-CMD ["uvicorn", "emailpolling:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "emailpolling.py"]
