--- a/chatservercode/chatserver/Dockerfile
+++ b/chatservercode/chatserver/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /opt/zconnect
 COPY emailpolling.py /opt/zconnect/
 COPY serverconnection.py /opt/zconnect/
 COPY .env /opt/zconnect/
+COPY Dockerfile /opt/zconnect/
 RUN apt-get update && apt-get install -y curl
 
 # Download get-pip.py if not present
